feat(new-setup): new setup project

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "simple-crud-with-nextjs",
-  "description": "Simple CRUD With Nextjs",
-  "version": "0.0.1",
+  "name": "crud-road-tp-senior",
+  "description": "CRUD Road To Senior",
+  "version": "1.0.0",
   "private": true,
-  "author": "Yusuf",
+  "author": "Yusuf Bagus Anggara",
   "license": "MIT",
   "scripts": {
     "dev": "next",
@@ -40,6 +40,7 @@
     "@ant-design/icons": "4.7.0",
     "@builder.io/partytown": "0.5.2",
     "@fontsource/poppins": "4.5.5",
+    "@react-oauth/google": "0.2.6",
     "antd": "^4.21.0",
     "axios": "0.26.1",
     "clsx": "1.1.1",
@@ -99,7 +100,7 @@
     "eslint-plugin-test-id": "2.1.0",
     "eslint-plugin-test-selectors": "2.0.3",
     "eslint-plugin-testing-library": "5.2.1",
-    "eslint-plugin-voila-pos-web": "file:./lint_rules",
+    "eslint-plugin-crud-road-to-senior-web": "file:./lint_rules",
     "husky": "^7.0.0",
     "jest": "27.5.1",
     "less": "4.1.2",
